fix z-index

--- a/src/pages/Home/PageFive/pageFive.scss
+++ b/src/pages/Home/PageFive/pageFive.scss
@@ -53,7 +53,7 @@
 
                 p {
                     color: #cacaca;
-                    z-index: 99;
+                    z-index: 1;
                     position: relative;
                     margin: 0;
                     padding: 15px 20px;
